faster implementation of the clone endpoint
